crates/bonsaidb-macros/tests/ui/collection/serialization_none_with_natural_id.stderr
error: `natural_id` must be manually implemented when using `serialization = None`
 --> tests/ui/collection/serialization_none_with_natural_id.rs:4:64
  |
4 | #[collection(name = "name", serialization = None, natural_id = |t: &Self| None)]
  |                                                                ^^^^^^^^^^^^^^^
