crates/bonsaidb-macros/tests/ui/collection/serialization_none_with_natural_id.rs
use bonsaidb::core::schema::Collection;

#[derive(Collection)]
#[collection(name = "name", serialization = None, natural_id = |t: &Self| None)]
struct Test;

fn main() {}
